# verified-sources

./: .dockerignore  .gitignore  CONTRIBUTING.md  DISTRIBUTION.md  Makefile  README.md  SHARE_PIPELINE.md  check-package.sh  check-requirements.py  devenv.nix  mypy.ini  null  pyproject.toml  pytest.ini  tox.ini
.claude/rules/: coding-style.md  imports.md  testing.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_extend_source.yml  3_source_request.yml  3_source_resuest.yml  bug-report.md  extend-a-source.md  new-community-pipeline.md  new-verified-pipeline.md  (+4 more)
ai/: README.md
docs/: BUILDING-BLOCKS.md  DISTRIBUTION.md
init/: README.md  __init__.py  pipeline.py  pipeline_generic.py
pipelines/: active_campaign_pipeline.py  algolia_hn_search_pipeline.py  asana_dlt_pipeline.py  asana_pipeline.py  chess_pipeline.py  dave_pipeline.py  dlt_asana_pipeline.py  docker-compose.yaml  edamam_pipeline.py  exchangerates.py  facebook_ads_pipeline.py  firebase_pipeline.py  github_pipeline.py  google_ads_pipeline.py  google_analytics_pipeline.py  google_play_reviews_pipeline.py  google_sheets_pipeline.py  hubspot_pipeline.py  matomo_pipeline.py  mux_pipeline.py  notion_pipeline.py  pipedrive_pipeline.py  placesapi_pipeline.py  planhat_pipeline.py  pyproject.toml  requirements.txt  salesforce_pipeline.py  sheet_pipeline.py  shopify_dlt_pipeline.py  shopify_pipeline.py  sql_database_pipeline.py  strapi_pipeline.py  stripe_analytics_pipeline.py  typeform.py  weather.py  workable_pipeline.py  youtube_data_pipeline.py  zendesk_pipeline.py
pipelines/.dlt/: config.toml  example.secrets.toml
pipelines/active_campaign/: __init__.py
pipelines/algolia_hn_search/: __init__.py  requirements.txt
pipelines/asana/: __init__.py
pipelines/asana_dlt/: __init__.py  const.py  helpers.py
pipelines/chess/: __init__.py  settings.py
pipelines/dlt_asana/: __init__.py
pipelines/edamam/: README.md  __init__.py
pipelines/exchange_rates/: __init__.py
pipelines/facebook_ads/: README.md  __init__.py  fb.py  helpers.py  requirements.txt  settings.py
pipelines/firebase/: README.md  __init__.py
pipelines/github/: README.md  __init__.py  queries.py
pipelines/google_ads/: __init__.py  generate_user_credentials.py  requirements.txt  setup_script_gcp_oauth.py
pipelines/google_ads/helpers/: data_processing.py  sample_load.py
pipelines/google_analytics/: __init__.py  requirements.txt  settings.py  setup_script.py  setup_script_gcp_oauth.py
pipelines/google_analytics/helpers/: __init__.py  credentials.py  data_processing.py  setup_script.py
pipelines/google_play_reviews/: __init__.py
pipelines/google_sheets/: README.md  __init__.py  api_calls.py  data_validator.py  google_sheets.py  requirements.txt  setup_script_gcp_oauth.py
pipelines/google_sheets/helpers/: api_calls.py  data_processing.py
pipelines/google_sheets/samples/: test1.xlsx
pipelines/hubspot/: __init__.py  client.py  endpoints.py  settings.py
pipelines/matomo/: __init__.py  requirements.txt  settings.py
pipelines/matomo/helpers/: data_processing.py  matomo_client.py
pipelines/mux/: __init__.py  requirements.txt  settings.py
pipelines/notion/: __init__.py  client.py  database.py  helpers.py  settings.py
pipelines/notion/helpers/: database.py
pipelines/pipedrive/: README.md  ReadMe.md  __init__.py  custom_fields_munger.py  helpers.py  incremental_loading_helpers.py  recents.py  settings.py
pipelines/pipedrive/helpers/: __init__.py  pages.py
pipelines/placesapi/: README.md  __init__.py  requirements.txt
pipelines/planhat/: __init__.py
pipelines/pokemon/: settings.py
pipelines/salesforce/: __init__.py  helpers.py  requirements.txt  settings.py
pipelines/salesforce/helpers/: credentials.py
pipelines/shopify/: __init__.py  incremental_loading_helpers.py
pipelines/shopify_dlt/: __init__.py  settings.py
pipelines/sql_database/: __init__.py  helpers.py  requirements.txt  source.py  sql_database.py  util.py
pipelines/strapi/: README.md  __init__.py  helpers.py  readme.md  requirements.txt  strapi.py
pipelines/stripe_analytics/: __init__.py  helpers.py  metrics.py  requirements.txt  settings.py  stripe_analytics.py
pipelines/stripe_analytics/data_generator/: random_data_generator.py  subscriptions_generator.py
pipelines/typeform/: typeform.py
pipelines/workable/: __init__.py  helpers.py  workable_client.py
pipelines/youtube_data/: README.md  __init__.py  requirements.txt
pipelines/zendesk/: README.md  __init__.py  requirements.txt  settings.py  zendesk.py
pipelines/zendesk/helpers/: api_helpers.py  credentials.py  populate_zendesk_test.py  talk_api.py
sources/: affinity_pipeline.py  airtable_pipeline.py  api_client.py  arrow_pandas_pipeline.py  bing_webmaster_pipeline.py  chess_pipeline.py  csv_reader_pipeline.py  datadog_pipeline.py  demo_asana_dlt_pipeline.py  demo_google_sheets_pipeline.py  demo_salesforce_pipeline.py  demo_zendesk_pipeline.py  facebook_ads_pipeline.py  filesystem_pipeline.py  freshdesk_pipeline.py  github_pipeline.py  google_ads_pipeline.py  google_analytics_pipeline.py  google_sheets_pipeline.py  hubspot_pipeline.py  inbox_pipeline.py  jira_pipeline.py  kafka_pipeline.py  kinesis_pipeline.py  matomo_pipeline.py  mongodb_arrow_pipeline.py  mongodb_pipeline.py  notion_pipeline.py  personio_pipeline.py  pg_legacy_replication_pipeline.py  pg_replication_pipeline.py  pipedrive_pipeline.py  pokemon_pipeline.py  quickbooks_online_pipeline.py  quickbooks_pipeline.py  rest_api_pipeline.py  scraping_pipeline.py  scrapy_scraper_pipeline.py  sharepoint_pipeline.py  shopify_dlt_pipeline.py  (+12 more)
sources/filesystem/gitpythonfs/: README.md  __init__.py  pyproject.toml
sources/filesystem/gitpythonfs/docs/: usage.ipynb
sources/filesystem/gitpythonfs/gitpythonfs/: __init__.py  core.py  git_cmd.py
sources/filesystem/gitpythonfs/tests/: test_core.py  test_git.py
tests/: conftest.py  diff_pipelines.py  sql_source.py  te.py  test_dlt_ai.py  test_dlt_init.py  utils.py
tools/: new_pipeline.py  new_source.py
(+501 files in other folders)
