[tool.poetry]
name = "dlt-verified-sources"
version = "0.1.0"
description = "Initial set of dlt sources with demo pipelines installable with `dlt init` command"
authors = ["Various Authors <team@dlthub.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sources"}]

[tool.poetry.dependencies]
python = "^3.8.1"
black = "^23.3.0"
dlt = {version = "^0.3.0", allow-prereleases = true, extras = ["redshift", "bigquery", "postgres", "duckdb"]}

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.0"
bandit = "^1.7.4"
flake8-bugbear = "^22.12.6"
flake8-tidy-imports = "^4.8.0"
flake8-encodings = "^0.5.0.post1"
flake8-builtins = "^2.1.0"
types-requests = "^2.28.11.7"
mimesis = "^7.0.0"
requests-mock = "^1.10.0"

[tool.black]
include = '.*py$'



[tool.poetry.group.sql_database.dependencies]
sqlalchemy = ">=1.4"
pymysql = "^1.0.3"



[tool.poetry.group.google_sheets.dependencies]
google-api-python-client = "^2.78.0"



[tool.poetry.group.zenpy.dependencies]
zenpy = "^2.0.25"



[tool.poetry.group.google_analytics.dependencies]
google-analytics-data = "^0.16.2"
google-api-python-client = "^2.86.0"
google-auth-oauthlib = "^1.0.0"
requests-oauthlib = "^1.3.1"



[tool.poetry.group.stripe_analytics.dependencies]
pandas = "^2.0.0"
stripe = "^5.0.0"



[tool.poetry.group.asana_dlt.dependencies]
asana = "^3.2.1"



[tool.poetry.group.shopify_dlt.dependencies]
shopifyapi = "^12.3.0"



[tool.poetry.group.facebook_ads.dependencies]
facebook-business = "^16.0.2"



[tool.poetry.group.salesforce.dependencies]
simple-salesforce = "^1.12.4"


[tool.poetry.group.unstructured.dependencies]
langchain = "^0.0.219"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

