[tool.poetry]
name = "gitpythonfs"
version = "0.1.0"
description = "An fsspec implementation for git repositories on the local file system."
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.10"
python = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
